Bug 127217 - setWidgetOnTop won't go off-top
Summary: setWidgetOnTop won't go off-top
Status: RESOLVED FIXED
Alias: None
Product: superkaramba
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Ryan Nickell
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-05-12 19:36 UTC by Jaroslaw Filiochowski
Modified: 2006-06-21 03:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jaroslaw Filiochowski 2006-05-12 19:36:34 UTC
Version:           0.39 (using KDE )

Widgets go on-top with "setWidgetOnTop(widget, True)", but fail to go off-top with "setWidgetOnTop(widget, False)".

The widget just stays on-top all the same, though now I can click on it and then send it off-top with KDE's hotkeys, like any other window. Before it goes on-top with setWidgetOnTop KDE's hotkeys to send it on-top have no effect.

I've got a work around using "reloadTheme(widget)", thus resetting widget's status, but that's no real solution.

Loaded widgets: just a test one for this behaviour.
Backtraces: command is executed correctly, no errors reported.
Reproducible: always.
Comment 1 Ryan Nickell 2006-06-21 03:01:32 UTC
SVN commit 553433 by nickell:

BUG:127217  

Use the KeepBelow and KeepAbove arguments to KWin::setState()
instead of using KWin::clearState().



 M  +2 -2      karamba.cpp  


--- branches/KDE/3.5/kdeutils/superkaramba/src/karamba.cpp #553432:553433
@@ -2047,12 +2047,12 @@
     if(stay)
     {
         onTop = true;
-        KWin::setState( winId(), NET::StaysOnTop );
+        KWin::setState( winId(), NET::KeepAbove );
     }
     else
     {
         onTop = false;
-        KWin::clearState( winId(), NET::StaysOnTop );
+        KWin::setState( winId(), NET::KeepBelow );
     }
 }