BUG:127217

Use the KeepBelow and KeepAbove arguments to KWin::setState()
instead of using KWin::clearState().


svn path=/branches/KDE/3.5/kdeutils/superkaramba/; revision=553433